<resources>
    <string name="app_name">QuickBite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">hello_world</string>
    <string name="home">Home</string>
    <string name="Search">search</string>
    <string name="profile">profile</string>
    <string name="saved_snackBar">saved</string>
    <string name="hello">so affect the outcome of the dish. For example, a mango smoothie may not taste as sweet and flavorful if the mangoes were sour and not in season.</string>
    <string name="search_history">search_history</string>
    <string name="last_Viewed">Last_Viewed</string>
    <string name="intro_desc_text">There is no need to fear failure. Tested recipes are guaranteed to work by our professional chefs.</string>
    <string name="default_web_client_id" translatable="false">604432015919-4rf7ue3tc3um421hjacseg293s4e2922.apps.googleusercontent.com</string>
    <string name="register_Text">Join Us</string>
    <string name="register_imageDesc">register Image</string>
    <string name="register_username">username</string>
    <string name="register_email">email</string>
    <string name="register_password">password</string>
    <string name="register_confirmPassword">confirm password</string>
    <string name="register_button_text">Agree and Register</string>
    <string name="register_fab_desc">nav to login</string>
    <string name="login_with_google_desc">login with google</string>
    <string name="register_now">Register Now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_as_guest_desc">login as Guest</string>
    <string name="login_as_guest_text">login as Guest</string>
    <string name="login_btn_text">login</string>
    <string name="enter_your_password_hint">enter your password</string>
    <string name="enter_your_email_hint">enter your email</string>
    <string name="login_top_image">loginTopImage</string>
    <string name="this_is_info_button">this is info button</string>
    <string name="this_is_profile_picture">this is profile picture</string>
    <string name="saved">saved</string>
    <string name="default_home_image">default home image</string>
    <string name="welcome">Welcome 👋🏼</string>
    <string name="user_name">user name</string>
    <string name="item_name">Item Name</string>
    <string name="clock_time">30 min</string>
    <string name="rate">(4.5)</string>
    <string name="image_of_item_in_home_recycleview">image of item in home recycleView</string>
    <string name="star_icon">star icon</string>
    <string name="item_image_in_home_recycleview">item image in home recycleView</string>
    <string name="save_icon">save icon</string>
    <string name="shedule_icon">shedule icon</string>
    <string name="rate_icon">rate icon</string>
    <string name="thai_basil_pork">Thai Basil Pork</string>
    <string name="favourite_item_image">favourite item image</string>
    <string name="no_favorites">No Favorites…</string>
    <string name="recipe_saved">Recipe Saved</string>
    <string name="filter_your_recipes_by_first_letter">filter your recipes by first letter</string>
    <string name="nav_to_profile">nav to profile</string>
    <string name="logout_desc">logout</string>
    <string name="settings_icon_title">Settings</string>
    <string name="toast_icon">toast icon</string>
    <string-array name="letters_array">
        <item>A</item>
        <item>B</item>
        <item>D</item>
        <item>C</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahamas</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Brazil</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cabo Verde</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo, Democratic Republic of the</item>
        <item>Congo, Republic of the</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>France</item>
        <item>Gabon</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Greece</item>
        <item>Grenada</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Korea, North</item>
        <item>Korea, South</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Qatar</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Sao Tome and Principe</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Timor-Leste</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Tuvalu</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="get_started">Get Started</string>
    <string name="this_is_intro_image_desc">this is intro image</string>
    <string name="thousands_of_tested_recipes">Thousands of tested recipes</string>
    <string name="categories_bottom_nav_title">categories</string>
    <string name="create_new_recipe">create new recipe</string>
    <string name="add">add</string>
    <string name="preference_select_theme">Select Theme</string>
    <string name="preference_select_theme_desc"> Choose your preferred app color theme</string>
    <string name="preference_appearance">appearance</string>
    <string name="preference_Language">Language</string>
    <string name="preference_Choose_Language">Choose Language</string>
    <string name="preference_select_Language">Select your preferred language</string>
    <string name="preference_Display_Mode">Display Mode</string>
    <string name="preference_Enable_Dark_Mode">Enable Dark Mode</string>
    <string name="preference_dark_mode_desc">Switch to dark mode for better night-time viewing</string>
    <string name="preference_help">Help &amp; Feedback</string>
    <string name="preference_Guide">Guide</string>
    <string name="preference_guide_desc">explore how to use QuickBite and know its feature</string>
    <string name="preference_Send_Feedback">Send Feedback</string>
    <string name="preference_feedback_desc">Tell us what you think</string>
</resources>