<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="appearance_category"
        android:title="@string/preference_appearance">
        <ListPreference
            android:defaultValue="green"
            android:entries="@array/theme_names"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/palette_24px"
            android:key="theme_key"
            android:summary="@string/preference_select_theme_desc"
            android:title="@string/preference_select_theme" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="language_category"
        android:title="@string/preference_Language">
        <ListPreference
            android:defaultValue="en"
            android:entries="@array/language_names"
            android:entryValues="@array/language_codes"
            android:icon="@drawable/language_24px"
            android:key="language_key"
            android:summary="@string/preference_select_Language"
            android:title="@string/preference_Choose_Language" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="mode_category"
        android:title="@string/preference_Display_Mode">

        <SwitchPreferenceCompat
            android:icon="@drawable/dark_mode_24px"
            android:key="dark_mode_key"
            android:summary="@string/preference_dark_mode_desc"
            android:title="@string/preference_Enable_Dark_Mode" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="help_category"
        android:title="@string/preference_help">

        <Preference
            android:icon="@drawable/developer_guide_24px"
            android:key="guide_key"
            android:summary="@string/preference_guide_desc"
            android:title="@string/preference_Guide" />

        <Preference
            android:icon="@drawable/mail_24px"
            android:key="feedback_key"
            android:summary="@string/preference_feedback_desc"
            android:title="@string/preference_Send_Feedback" />
    </PreferenceCategory>

</PreferenceScreen>
