<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/setting"
        android:title="@string/settings_icon_title"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:contentDescription="@string/nav_to_profile"
                android:enabled="true"
                android:icon="@drawable/profile"
                android:iconTint="@color/darkGreen"
                android:title="@string/profile" />
            <item
                android:contentDescription="@string/logout_desc"
                android:enabled="true"
                android:icon="@drawable/logout_24px"
                android:iconTint="@color/darkGreen"
                android:title="@string/logout_desc" />
        </menu>
    </item>
</menu>