<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    app:elevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="227dp"
        android:layout_height="260dp"
        android:background="?attr/color">


        <ImageView
            android:id="@+id/img_fav_meal"
            android:layout_width="0dp"
            android:layout_height="174dp"
            android:contentDescription="@string/favourite_item_image"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_fav_meal_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/thai_basil_pork"
            android:textColor="?attr/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_fav_meal" />


        <ImageView
            android:id="@+id/img_star"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/rate_icon"
            android:src="@drawable/star"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fav_meal_name" />


        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rate"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/img_star"
            app:layout_constraintTop_toTopOf="@id/img_star" />


        <ImageView
            android:id="@+id/img_time"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/shedule_icon"
            android:src="@drawable/schedule_24px"
            app:layout_constraintStart_toEndOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="@id/img_star" />


        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/clock_time"
            android:textColor="?attr/colorAccent"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/img_time"
            app:layout_constraintTop_toTopOf="@id/img_star" />

        <ImageView
            android:id="@+id/iv_saveIcon"
            android:layout_width="31dp"
            android:layout_height="28dp"
            android:contentDescription="@string/save_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/notification4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>